fixed basic content to index.html

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
     <head>
-        <titile>
+        <title>
             SOME TITLE
-        </titile>
+        </title>
     </head>
     <body>
         CONTENT WILL GO HERE
